# empty

./: Cargo.toml  Makefile  README.md  build.rs  link.ld  x86_64-unknown-none.json
.cargo/: config.toml
.github/: copilot-instructions.md
src/: lib.rs  main.rs
src/arch/x86_64/: boot.asm  grub.cfg  multiboot_header.asm
