[package]
name = "empty"
version = "0.1.0"
edition = "2021"
	build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
bootloader = "0.9.23"

[package.metadata.bootloader]
binary = "target/x86_64-unknown-none/debug/empty"

[build]
target = "x86_64-unknown-none.json"

