[package]
name = "empty"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]


[package.metadata.bootloader]
binary = "target/x86_64-unknown-none/debug/empty"

[build]
target = "x86_64-unknown-none.json"

